--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Website Practice</title>
+    <title>Hamza-Khan-Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="./styles.css" />
@@ -180,8 +180,7 @@
     </section>
       <section id="contact" class="Contact-section">
         <div>
-          <h2>Enrol here now</h2>
-          <button>Contact us</button>
+          <h2>To be added...</h2>
         </div>
       </section>
     </main>
