--- a/index.html
+++ b/index.html
@@ -152,37 +152,46 @@
       <section id="projects">
         <h2>Projects</h2>
         <div class="project-container">
-            <div class="project">
-                <img src="1.png" alt="Project 1">
-                <div class="project-info">
-                    <h3>Online Portfolio v1.0</h3>
-                    <p>HTML & CSS</p>
-                    <a href="https://linktoyourproject1.com" target="_blank">View Project</a>
-                </div>
+          <div class="project">
+            <img src="1.png" alt="Project 1" />
+            <div class="project-info">
+              <h3>Online Portfolio v1.0</h3>
+              <p>RESPONSIVE HTML & CSS</p>
+              <a href="https://dev-khan-project1.netlify.app/" target="_blank"
+                >View Project</a
+              >
+              <a
+                href="https://github.com/DevKhan786/Hamza-Khan-Portfolio"
+                target="_blank"
+                >View Github</a
+              >
             </div>
-            <div class="project">
-                <img src="" alt="Project 2">
-                <div class="project-info">
-                    <h3>Project 2</h3>
-                    <p>To be added...</p>
-                    <a>View Project</a>
-                </div>
+          </div>
+          <div class="project">
+            <img src="" alt="Project 2" />
+            <div class="project-info">
+              <h3>Project 2</h3>
+              <p>To be added...</p>
+              <a>View Project</a>
+              <a>View Github</a>
             </div>
-            <div class="project">
-                <img src="" alt="Project 3">
-                <div class="project-info">
-                    <h3>Project 3</h3>
-                    <p>To be added...</p>
-                    <a>View Project</a>
-                </div>
+          </div>
+          <div class="project">
+            <img src="" alt="Project 3" />
+            <div class="project-info">
+              <h3>Project 3</h3>
+              <p>To be added...</p>
+              <a>View Project</a>
+              <a>View Github</a>
             </div>
+          </div>
         </div>
-    </section>
-      <section id="contact" class="Contact-section">
+      </section>
+      <!-- <section id="contact" class="Contact-section"> 
         <div>
           <h2>To be added...</h2>
         </div>
-      </section>
+      </section>-->
     </main>
   </body>
 </html>
