--- a/index.html
+++ b/index.html
@@ -57,10 +57,8 @@
           </div>
           <div>
             <p class="main-text-body">
-              Making websites is now one of the easiest things in the world. You
-              just need to learn
-              <span class="lightText">HTML, CSS, Javascript</span> and you are
-              good to go!
+              I code with
+              <span class="lightText">HTML, CSS, Javascript, C# & Java.</span>
             </p>
           </div>
           <div class="linked">
