--- a/index.html
+++ b/index.html
@@ -160,33 +160,58 @@
             <img src="1.png" alt="Project 1" />
             <div class="project-info">
               <h3>Online Portfolio v1.0</h3>
-              <p>RESPONSIVE HTML & CSS</p>
+              <p>HTML & CSS</p>
               <a href="https://dev-khan-project1.netlify.app/" target="_blank"
                 >View Project</a
               >
+              <a href="https://github.com/DevKhan786/Portfolio" target="_blank"
+                >View Github</a
+              >
+            </div>
+          </div>
+          <div class="project">
+            <img src="Expenses.png" alt="Project 2" />
+            <div class="project-info">
+              <h3>Expenses Tracker</h3>
+              <p>HTML, CSS & JAVASCRIPT with LOCAL STORAGE</p>
+              <a href="https://dev-khan-project2.netlify.app" target="_blank"
+                >View Project</a
+              >
               <a
-                href="https://github.com/DevKhan786/Hamza-Khan-Portfolio"
+                href="https://github.com/DevKhan786/Expense-Tracker"
                 target="_blank"
                 >View Github</a
               >
             </div>
           </div>
           <div class="project">
-            <img src="" alt="Project 2" />
+            <img src="rpg.png" alt="Project 3" />
             <div class="project-info">
-              <h3>Project 2</h3>
-              <p>To be added...</p>
-              <a>View Project</a>
-              <a>View Github</a>
+              <h3>Short RPG Game</h3>
+              <p>HTML, CSS & JavaScript</p>
+              <a href="https://dev-khan-project3.netlify.app" target="_blank"
+                >View Project</a
+              >
+              <a
+                href="https://github.com/DevKhan786/JS-rpg-game"
+                target="_blank"
+                >View Github</a
+              >
             </div>
           </div>
           <div class="project">
-            <img src="" alt="Project 3" />
+            <img src="qwewqe.png" alt="Project 4" />
             <div class="project-info">
-              <h3>Project 3</h3>
-              <p>To be added...</p>
-              <a>View Project</a>
-              <a>View Github</a>
+              <h3>Palindrome Checker</h3>
+              <p>HTML, CSS & JavaScript</p>
+              <a href="https://dev-khan-project4.netlify.app" target="_blank"
+                >View Project</a
+              >
+              <a
+                href="https://github.com/DevKhan786/palindrome-checker"
+                target="_blank"
+                >View Github</a
+              >
             </div>
           </div>
         </div>
