remove about & resume

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+    />
+
+    <script src="script.js" defer></script>
   </head>
   <body id="home">
     <section class="Header-section">
@@ -28,15 +34,10 @@
         <div class="nav-title">
           <h5>DevKhan</h5>
         </div>
+
         <div class="nav-links">
           <div>
             <a href="#home">Home</a>
-          </div>
-          <div>
-            <a href="#about">About</a>
-          </div>
-          <div>
-            <a href="#resume">Resume</a>
           </div>
           <div>
             <a href="#projects">Projects</a>
@@ -44,6 +45,7 @@
           <div>
             <a href="#contact">Contact</a>
           </div>
+
         </div>
       </nav>
       <header>
@@ -74,85 +76,13 @@
           </div>
         </div>
         <div class="main-arrow">
-          <a href="#about">
+          <a href="#projects">
             <i class="fa-solid fa-angles-down"></i>
           </a>
         </div>
       </header>
     </section>
     <main>
-      <section id="about" class="About-section">
-        <div class="about-div">
-          <h2>About me</h2>
-          <p class="bigger">
-            <span class="lightText">Software Developer</span> with strong
-            knowledge of <span class="lightText">front-end</span> and
-            <span class="lightText">back-end</span> development. Equipped with
-            an aptitude for design, problem-solving, and
-            <span class="lightText">several certifications</span> in
-            programming.
-          </p>
-
-          <p class="smaller">
-            I've began coding since undertaking my
-            <span class="lightText">Computer Science</span> degree in 2018.
-            During the degree I learned mostly
-            <span class="lightText">Java</span> and worked with
-            <span class="lightText">SQL</span> on various projects for the
-            backend.
-          </p>
-
-          <p class="smaller">
-            I've always had an aptitude and interest in coding since a young
-            age, which I believe to stem from my interest in gaming. As I spent
-            a lot of my free time gaming, it was natural for me to want to learn
-            how to make games.
-          </p>
-
-          <p class="smaller">
-            Consequently, I undertook a
-            <span class="lightText">Games Design Masters</span> degree in 2022.
-            The language I focused on the most during this time was
-            <span class="lightText">C#</span> in
-            <span class="lightText">Unity Engine.</span>
-          </p>
-
-          <p class="smaller">
-            Since finishing my education, I have been working on other areas of
-            programming. I have been coding websites and various projects using
-            <span class="lightText">Javascript, HTML & CSS</span>, some of which
-            are displayed on this portfolio.
-          </p>
-
-          <div id="row">
-            <span title="HTML5">
-              <i class="image fa-brands fa-html5"></i>
-            </span>
-            <span title="CSS">
-              <i class="image fa-brands fa-css3-alt"></i>
-            </span>
-            <span title="JAVASCRIPT">
-              <i class="image fa-brands fa-js"></i>
-            </span>
-            <span title="JAVA">
-              <i class="image fa-brands fa-java"></i>
-            </span>
-            <span title="UNITY">
-              <i class="image fa-brands fa-unity"></i>
-            </span>
-            <span title="C#">
-              <i class="image fa-solid fa-c"></i>
-            </span>
-          </div>
-        </div>
-      </section>
-      <section id="resume" class="Resume-section">
-        <div class="resume-button">
-          <a href="./CV-Compact.pdf" class="resume" target="_blank"
-            ><h2>RESUME</h2>
-          </a>
-        </div>
-      </section>
       <section id="projects">
         <h2>Projects</h2>
         <div class="project-container">
