--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <img src="Expenses.png" alt="Project 2" />
             <div class="project-info">
               <h3>Expenses Tracker</h3>
-              <p>HTML, CSS & JAVASCRIPT with LOCAL STORAGE</p>
+              <p>HTML, CSS & JAVASCRIPT</p>
               <a href="https://dev-khan-project2.netlify.app" target="_blank"
                 >View Project</a
               >
