--- a/index.html
+++ b/index.html
@@ -129,6 +129,22 @@
               >
             </div>
           </div>
+          <div class="project">
+            <img src="todolist.png" alt="Project 4" />
+            <div class="project-info">
+              <h3>CRUD Application</h3>
+              <p>HTML, CSS & JavaScript</p>
+              <p>Create, prioritise, edit and delete tasks</p>
+              <a href="https://hamzakhantodolist.netlify.app" target="_blank"
+                >View Project</a
+              >
+              <a
+                href="https://github.com/DevKhan786/To-do-v2"
+                target="_blank"
+                >View Github</a
+              >
+            </div>
+          </div>
         </div>
       </section>
       <section id="contact" class="Contact-section">
