--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="project">
             <img src="1.png" alt="Project 1" />
             <div class="project-info">
-              <h3>Online Portfolio v1.0</h3>
+              <h3>Online Portfolio v1</h3>
               <p>HTML & CSS</p>
               <a href="https://dev-khan-project1.netlify.app/" target="_blank"
                 >View Project</a
@@ -134,12 +134,41 @@
             <div class="project-info">
               <h3>CRUD Application</h3>
               <p>HTML, CSS & JavaScript</p>
-              <p>Create, prioritise, edit and delete tasks</p>
               <a href="https://hamzakhantodolist.netlify.app" target="_blank"
                 >View Project</a
               >
               <a
                 href="https://github.com/DevKhan786/To-do-v2"
+                target="_blank"
+                >View Github</a
+              >
+            </div>
+          </div>
+          <div class="project">
+            <img src="finance.png" alt="Project 5" />
+            <div class="project-info">
+              <h3>Finance Application</h3>
+              <p>HTML, CSS & JavaScript</p>
+              <a href="https://hamzakhanfinanceapp.netlify.app/" target="_blank"
+                >View Project</a
+              >
+              <a
+                href="https://github.com/DevKhan786/Finance-App"
+                target="_blank"
+                >View Github</a
+              >
+            </div>
+          </div>
+          <div class="project">
+            <img src="quiz.png" alt="Project 6" />
+            <div class="project-info">
+              <h3>Short Quiz Game</h3>
+              <p>HTML, CSS & JavaScript</p>
+              <a href="https://hamzakhanquizapp.netlify.app/" target="_blank"
+                >View Project</a
+              >
+              <a
+                href="https://github.com/DevKhan786/Quiz-App"
                 target="_blank"
                 >View Github</a
               >
