--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
             <div class="project-info">
               <h3>CRUD Application</h3>
               <p>HTML, CSS & JavaScript</p>
-              <a href="https://hamzakhantodolist.netlify.app" target="_blank"
+              <a href="https://crudapplicationhamza.netlify.app/" target="_blank"
                 >View Project</a
               >
               <a
-                href="https://github.com/DevKhan786/To-do-v2"
+                href="https://github.com/DevKhan786/To-do-test"
                 target="_blank"
                 >View Github</a
               >
