--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
           <div class="project">
             <img src="todolist.png" alt="Project 3" />
             <div class="project-info">
-              <h3>CRUD Application</h3>
+              <h3>ROBUST CRUD Application</h3>
               <p>HTML, CSS & JavaScript</p>
-              <a href="https://crudapplicationhamza.netlify.app/" target="_blank"
+              <a href="https://crudapphamza.netlify.app/" target="_blank"
                 >View Project</a
               >
               <a
-                href="https://github.com/DevKhan786/To-do-test"
+                href="https://github.com/DevKhan786/final-vanilla-javascript"
                 target="_blank"
                 >View Github</a
               >
