--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
           <div>
             <a href="#contact">Contact</a>
           </div>
-
         </div>
       </nav>
       <header>
@@ -102,16 +101,14 @@
             </div>
           </div>
           <div class="project">
-            <img src="todolist.png" alt="Project 3" />
+            <img src="todolist.png" alt="Project 2" />
             <div class="project-info">
               <h3>ROBUST CRUD Application</h3>
-              <p>HTML, CSS & JavaScript</p>
-              <a href="https://crudapphamza.netlify.app/" target="_blank"
+              <p>HTML, CSS, JavaScript & React</p>
+              <a href="https://crudapphamzakhan.netlify.app/" target="_blank"
                 >View Project</a
               >
-              <a
-                href="https://github.com/DevKhan786/final-vanilla-javascript"
-                target="_blank"
+              <a href="https://github.com/DevKhan786/ReactApp" target="_blank"
                 >View Github</a
               >
             </div>
