--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div class="project">
             <img src="todolist.png" alt="Project 2" />
             <div class="project-info">
-              <h3>ROBUST CRUD Application</h3>
+              <h3>CRUD Application</h3>
               <p>HTML, CSS, JavaScript & React</p>
               <a href="https://crudapphamzakhan.netlify.app/" target="_blank"
                 >View Project</a
