--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <img src="Expenses.png" alt="Project 1" />
             <div class="project-info">
               <h3>Expenses Tracker</h3>
-              <p>HTML, CSS & JAVASCRIPT</p>
+              <p>HTML, CSS & Vanilla JavaScript</p>
               <a href="https://dev-khan-project2.netlify.app" target="_blank"
                 >View Project</a
               >
