--- a/index.html
+++ b/index.html
@@ -90,10 +90,38 @@
             <div class="project-info">
               <h3>CRUD Application</h3>
               <p>HTML, CSS, JavaScript & React</p>
-              <a href="https://crudapphamzakhan.netlify.app/" target="_blank"
+              <a href="https://reacthamzakhan.netlify.app" target="_blank"
                 >View Project</a
               >
               <a href="https://github.com/DevKhan786/ReactApp" target="_blank"
+                >View Github</a
+              >
+            </div>
+          </div>
+          <div class="project">
+            <img src="blog.png" alt="Project 2" />
+            <div class="project-info">
+              <h3>Blog Application</h3>
+              <p>HTML, CSS, JavaScript, React & Firebase</p>
+              <a href="https://hamzakhanblog.netlify.app" target="_blank"
+                >View Project</a
+              >
+              <a href="https://github.com/DevKhan786/myblog" target="_blank"
+                >View Github</a
+              >
+            </div>
+          </div>
+          <div class="project">
+            <img src="chatapp.png" alt="Project 3" />
+            <div class="project-info">
+              <h3>Real-time Chat</h3>
+              <p>HTML, CSS, JavaScript, React & Firebase</p>
+              <a href="https://chatapplicationhamza.netlify.app" target="_blank"
+                >View Project</a
+              >
+              <a
+                href="https://github.com/DevKhan786/Chatapplication"
+                target="_blank"
                 >View Github</a
               >
             </div>
