--- a/index.html
+++ b/index.html
@@ -126,6 +126,19 @@
               >
             </div>
           </div>
+          <div class="project">
+            <img src="hamazon.png" alt="Project 4" />
+            <div class="project-info">
+              <h3>E-commerce Site</h3>
+              <p>HTML, CSS, JavaScript, React, Firebase & Tailwind CSS</p>
+              <a href="https://hamazonproject.netlify.app/" target="_blank"
+                >View Project</a
+              >
+              <a href="https://github.com/DevKhan786/Ecommerce" target="_blank"
+                >View Github</a
+              >
+            </div>
+          </div>
         </div>
       </section>
       <section id="contact" class="Contact-section">
