--- a/index.html
+++ b/index.html
@@ -86,33 +86,22 @@
         <h2>Projects</h2>
         <div class="project-container">
           <div class="project">
-            <img src="todolist.png" alt="Project 1" />
+            <img src="Cryptoapp.png" alt="Project 1" />
             <div class="project-info">
-              <h3>CRUD Application</h3>
+              <h3>Crypto Tracker</h3>
               <p></p>
-              <a href="https://reacthamzakhan.netlify.app" target="_blank"
+              <a href="https://cryptoapphamza.netlify.app/" target="_blank"
                 >View Project</a
               >
-              <a href="https://github.com/DevKhan786/ReactApp" target="_blank"
+              <a
+                href="https://github.com/DevKhan786/Cryptoreact"
+                target="_blank"
                 >View Github</a
               >
             </div>
           </div>
           <div class="project">
-            <img src="blog.png" alt="Project 2" />
-            <div class="project-info">
-              <h3>Blog Application</h3>
-              <p></p>
-              <a href="https://hamzakhanblog.netlify.app" target="_blank"
-                >View Project</a
-              >
-              <a href="https://github.com/DevKhan786/myblog" target="_blank"
-                >View Github</a
-              >
-            </div>
-          </div>
-          <div class="project">
-            <img src="chatapp.png" alt="Project 3" />
+            <img src="chatapp.png" alt="Project 2" />
             <div class="project-info">
               <h3>Real-time Chat</h3>
               <p></p>
@@ -127,7 +116,7 @@
             </div>
           </div>
           <div class="project">
-            <img src="hamazon.png" alt="Project 4" />
+            <img src="hamazon.png" alt="Project 3" />
             <div class="project-info">
               <h3>E-commerce Site</h3>
               <p></p>
