new project added - twitter clone

--- a/index.html
+++ b/index.html
@@ -101,15 +101,15 @@
             </div>
           </div>
           <div class="project">
-            <img src="chatapp.png" alt="Project 2" />
+            <img src="TWITTER CLONE.png" alt="Project 2" />
             <div class="project-info">
-              <h3>Real-time Chat</h3>
+              <h3>Twitter Clone</h3>
               <p></p>
-              <a href="https://chatapplicationhamza.netlify.app" target="_blank"
+              <a href="https://twitter-clone-qnbf.onrender.com" target="_blank"
                 >View Project</a
               >
               <a
-                href="https://github.com/DevKhan786/Chatapplication"
+                href="https://github.com/DevKhan786/TWITTER-CLONE"
                 target="_blank"
                 >View Github</a
               >
