estate project added

--- a/index.html
+++ b/index.html
@@ -86,16 +86,17 @@
         <h2>Projects</h2>
         <div class="project-container">
           <div class="project">
-            <img src="Cryptoapp.png" alt="Project 1" />
+            <img src="ESTATE RENTAL.png" alt="Project 1" />
             <div class="project-info">
-              <h3>Crypto Tracker</h3>
+              <h3>MERN Estate Rental</h3>
               <p></p>
-              <a href="https://cryptoapphamza.netlify.app/" target="_blank"
-                >View Project</a
-              >
-              <a
-                href="https://github.com/DevKhan786/Cryptoreact"
-                target="_blank"
+              <!-- 
+<a href="https://cryptoapphamza.netlify.app/" target="_blank">
+    View Project
+</a> 
+-->
+
+              <a href="https://github.com/DevKhan786/mern-auth" target="_blank"
                 >View Github</a
               >
             </div>
