--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <div class="project">
             <img src="ESTATE RENTAL.png" alt="Project 1" />
             <div class="project-info">
-              <h3>MERN Estate Rental</h3>
+              <h3>Full Stack Estate Rental</h3>
               <p></p>
               <!-- 
 <a href="https://cryptoapphamza.netlify.app/" target="_blank">
@@ -104,7 +104,7 @@
           <div class="project">
             <img src="TWITTER CLONE.png" alt="Project 2" />
             <div class="project-info">
-              <h3>Twitter Clone</h3>
+              <h3>Full Stack Twitter Clone</h3>
               <p></p>
               <a href="https://twitter-clone-qnbf.onrender.com" target="_blank"
                 >View Project</a
@@ -117,14 +117,16 @@
             </div>
           </div>
           <div class="project">
-            <img src="hamazon.png" alt="Project 3" />
+            <img src="storesite.png" alt="Project 3" />
             <div class="project-info">
-              <h3>E-commerce Site</h3>
+              <h3>Full Stack E-commerce</h3>
               <p></p>
-              <a href="https://hamazonproject.netlify.app/" target="_blank"
+              <a href="https://storemern.onrender.com/" target="_blank"
                 >View Project</a
               >
-              <a href="https://github.com/DevKhan786/Ecommerce" target="_blank"
+              <a
+                href="https://github.com/DevKhan786/STOREMERN/tree/master"
+                target="_blank"
                 >View Github</a
               >
             </div>
