--- a/index.html
+++ b/index.html
@@ -86,17 +86,17 @@
         <h2>Projects</h2>
         <div class="project-container">
           <div class="project">
-            <img src="ESTATE RENTAL.png" alt="Project 1" />
+            <img src="SPOTIFYCLONE.png" alt="Project 1" />
             <div class="project-info">
-              <h3>Full Stack Estate Rental</h3>
+              <h3>Spotify Clone</h3>
               <p></p>
-              <!-- 
-<a href="https://cryptoapphamza.netlify.app/" target="_blank">
-    View Project
-</a> 
--->
+              <a href="https://spotifyclone-20ig.onrender.com/" target="_blank"
+                >View Project</a
+              >
 
-              <a href="https://github.com/DevKhan786/mern-auth" target="_blank"
+              <a
+                href="https://github.com/DevKhan786/SPOTIFYCLONE"
+                target="_blank"
                 >View Github</a
               >
             </div>
