--- a/index.html
+++ b/index.html
@@ -42,9 +42,6 @@
           <div>
             <a href="#projects">Projects</a>
           </div>
-          <div>
-            <a href="#contact">Contact</a>
-          </div>
         </div>
       </nav>
       <header>
@@ -84,6 +81,7 @@
     <main>
       <section id="projects">
         <h2>Projects</h2>
+        <p>May take a moment to spin-up...</p>
         <div class="project-container">
           <div class="project">
             <img src="SPOTIFYCLONE.png" alt="Project 1" />
@@ -132,52 +130,6 @@
             </div>
           </div>
         </div>
-      </section>
-      <section id="contact" class="Contact-section">
-        <div class="Contact-heading">
-          <h4>Contact me</h4>
-          <p>
-            Send a message
-            <span class="lightText">so we can work together.</span>
-          </p>
-        </div>
-        <div class="Contact-body">
-          <form action="https://formspree.io/f/myzgkzln" method="POST">
-            <input
-              type="text"
-              name="first"
-              placeholder="First Name"
-              autocomplete="off"
-              required
-            />
-            <input
-              type="text"
-              name="last"
-              placeholder="Last Name"
-              autocomplete="off"
-              required
-            />
-            <input
-              type="email"
-              name="email"
-              placeholder="Email"
-              autocomplete="off"
-              required
-            />
-            <textarea
-              rows="5"
-              cols="50"
-              name="message"
-              autocomplete="off"
-              placeholder="Message here"
-              required
-            ></textarea>
-            <button type="submit">Send</button>
-          </form>
-        </div>
-        <a href="#home" class="scroll-up">
-          <i class="fa-solid fa-arrow-up"></i>
-        </a>
       </section>
     </main>
   </body>
