--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Online web portfolio for Hamza Khan to display his technical 
-      and analytical prowess in the software technology field."
+      content="Portfolio of Hamza Khan, a skilled freelance software developer."
     />
-
-    <title>Hamza-Khan-Portfolio</title>
+    <title>Hamza Khan Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="./styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
       rel="stylesheet"
@@ -21,111 +18,137 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
-    />
-
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body id="home">
+    <!-- Header -->
     <section class="Header-section">
       <nav>
         <div class="nav-title">
           <h5>DevKhan</h5>
         </div>
-
         <div class="nav-links">
-          <div>
-            <a href="#home">Home</a>
-          </div>
-          <div>
-            <a href="#projects">Projects</a>
-          </div>
+          <a href="#home">Home</a>
+          <a href="#skills">Skills</a>
+          <a href="#projects">Projects</a>
         </div>
       </nav>
       <header>
         <div class="main-text">
-          <div>
-            <h6 class="main-text-small">Hey, I'm</h6>
-            <h1>Hamza Khan</h1>
-          </div>
-          <div>
-            <h4>Freelance Software Developer</h4>
-          </div>
-          <div>
-            <p class="main-text-body">
-              I code with
-              <span class="lightText">HTML, CSS, Javascript, C# & Java.</span>
-            </p>
-          </div>
+          <h6 class="main-text-small">Hello, I’m</h6>
+          <h1>Hamza Khan</h1>
+          <h4>Freelance Software Developer</h4>
+          <p>
+            Transforming ideas into reality with <span>React.js</span>,
+            <span>Node.js</span>, and cutting-edge technologies.
+          </p>
           <div class="linked">
             <a target="_blank" href="https://www.linkedin.com/in/hamzakhan786/">
-              <i class="fa-brands fa-linkedin-in linked"></i>
+              <i class="fa-brands fa-linkedin"></i>
             </a>
             <a target="_blank" href="https://github.com/DevKhan786">
-              <i class="fa-brands fa-github linked"></i>
+              <i class="fa-brands fa-github"></i>
             </a>
             <a target="_blank" href="./CV-Compact.pdf">
-              <i class="fa-regular fa-file-pdf linked"></i>
+              <i class="fa-regular fa-file-pdf"></i>
             </a>
           </div>
         </div>
         <div class="main-arrow">
-          <a href="#projects">
-            <i class="fa-solid fa-angles-down"></i>
+          <a href="#skills">
+            <i class="fa-solid fa-chevron-down"></i>
           </a>
         </div>
       </header>
     </section>
+
+    <!-- Skills Section -->
+    <section id="skills">
+      <h2>Skills</h2>
+      <div class="skills-container">
+        <div class="skill">
+          <i class="fa-solid fa-code"></i>
+          <h3>Languages</h3>
+          <p>JavaScript (ES6+), TypeScript, HTML5, CSS3</p>
+        </div>
+        <div class="skill">
+          <i class="fa-solid fa-laptop-code"></i>
+          <h3>Frontend</h3>
+          <p>
+            React.js, Redux, Tailwind CSS, Chart.js, Zustand, Shadcn, React
+            Query
+          </p>
+        </div>
+        <div class="skill">
+          <i class="fa-solid fa-server"></i>
+          <h3>Backend</h3>
+          <p>Node.js, Express.js, MongoDB, SQL, Firebase</p>
+        </div>
+        <div class="skill">
+          <i class="fa-solid fa-toolbox"></i>
+          <h3>Tools</h3>
+          <p>Git, GitHub, Adobe Creative Suite, Stripe API</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Projects Section -->
     <main>
       <section id="projects">
         <h2>Projects</h2>
-        <p>May take a moment to spin-up...</p>
+        <p>Projects may take a moment to spin-up...</p>
         <div class="project-container">
           <div class="project">
-            <img src="SPOTIFYCLONE.png" alt="Project 1" />
+            <img src="SPOTIFYCLONE.png" alt="Spotify Clone" />
             <div class="project-info">
               <h3>Spotify Clone</h3>
-              <p></p>
+              <p>
+                A music streaming platform with playback, volume controls, and a
+                seamless user experience.
+              </p>
               <a href="https://spotifyclone-20ig.onrender.com/" target="_blank"
-                >View Project</a
+                >View Live</a
               >
-
               <a
                 href="https://github.com/DevKhan786/SPOTIFYCLONE"
                 target="_blank"
-                >View Github</a
+                >View Code</a
               >
             </div>
           </div>
           <div class="project">
-            <img src="TWITTER CLONE.png" alt="Project 2" />
+            <img src="TWITTER CLONE.png" alt="Twitter Clone" />
             <div class="project-info">
-              <h3>Full Stack Twitter Clone</h3>
-              <p></p>
+              <h3>Twitter Clone</h3>
+              <p>
+                Full-stack clone with user authentication, posts, likes, and a
+                scalable backend.
+              </p>
               <a href="https://twitter-clone-qnbf.onrender.com" target="_blank"
-                >View Project</a
+                >View Live</a
               >
               <a
                 href="https://github.com/DevKhan786/TWITTER-CLONE"
                 target="_blank"
-                >View Github</a
+                >View Code</a
               >
             </div>
           </div>
           <div class="project">
-            <img src="storesite.png" alt="Project 3" />
+            <img src="storesite.png" alt="E-commerce Site" />
             <div class="project-info">
-              <h3>Full Stack E-commerce</h3>
-              <p></p>
+              <h3>E-commerce Website</h3>
+              <p>
+                Built with React.js and Stripe for secure payments, featuring
+                admin dashboards and dynamic carts.
+              </p>
               <a href="https://storemern.onrender.com/" target="_blank"
-                >View Project</a
+                >View Live</a
               >
               <a
                 href="https://github.com/DevKhan786/STOREMERN/tree/master"
                 target="_blank"
-                >View Github</a
+                >View Code</a
               >
             </div>
           </div>
