--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <h1>Hamza Khan</h1>
           <h4>Freelance Software Developer</h4>
           <p>
-            Transforming ideas into reality with <span>React.js</span>,
+            Specialised in <span>JavaScript</span> with <span>React.js</span>,
             <span>Node.js</span>, and cutting-edge technologies.
           </p>
           <div class="linked">
