--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
       <div class="skills-container">
         <div class="skill">
           <i class="fa-solid fa-code"></i>
-          <h3>Languages</h3>
+          <h3><span>Languages</span></h3>
           <p>JavaScript (ES6+), TypeScript, HTML5, CSS3</p>
         </div>
         <div class="skill">
           <i class="fa-solid fa-laptop-code"></i>
-          <h3>Frontend</h3>
+          <h3><span>Frontend</span></h3>
           <p>
             React.js, Redux, Tailwind CSS, Chart.js, Zustand, Shadcn, React
             Query
@@ -81,12 +81,12 @@
         </div>
         <div class="skill">
           <i class="fa-solid fa-server"></i>
-          <h3>Backend</h3>
+          <h3><span>Backend</span></h3>
           <p>Node.js, Express.js, MongoDB, SQL, Firebase</p>
         </div>
         <div class="skill">
           <i class="fa-solid fa-toolbox"></i>
-          <h3>Tools</h3>
+          <h3><span>Tools</span></h3>
           <p>Git, GitHub, Adobe Creative Suite, Stripe API</p>
         </div>
       </div>
@@ -101,7 +101,7 @@
           <div class="project">
             <img src="SPOTIFYCLONE.png" alt="Spotify Clone" />
             <div class="project-info">
-              <h3>Spotify Clone</h3>
+              <h3><span>Spotify Clone</span></h3>
               <p>
                 A music streaming platform with playback, volume controls, and a
                 seamless user experience.
@@ -119,7 +119,7 @@
           <div class="project">
             <img src="TWITTER CLONE.png" alt="Twitter Clone" />
             <div class="project-info">
-              <h3>Twitter Clone</h3>
+              <h3><span>Twitter Clone</span></h3>
               <p>
                 Full-stack clone with user authentication, posts, likes, and a
                 scalable backend.
@@ -137,7 +137,7 @@
           <div class="project">
             <img src="storesite.png" alt="E-commerce Site" />
             <div class="project-info">
-              <h3>E-commerce Website</h3>
+              <h3><span>E-commerce Website</span></h3>
               <p>
                 Built with React.js and Stripe for secure payments, featuring
                 admin dashboards and dynamic carts.
